Magick++ release numbering tracks ImageMagick release numbering so the
Magick++ release number increments even if there are no changes associated
with Magick++ itself.

(5.3.9)
  * User now may tell Blob updateNoCopy() what memory system (C or C++)
    the memory was allocated from.  Used to assume the C++ allocator.
    This resolves a bug on some platforms (e.g. Windows).

(5.3.8.1)
  * No change

(5.3.8)
  * New class 'TypeMetric' to contain font type metrics.

  * New Image method 'fontTypeMetrics()' to obtain font type metrics.

  * Image colorMap method automatically extends the colormap if index
    is past the end of the current colormap.

  * Added clipMask method to add a clip mask to the current
    image. Prevents modification to image pixels wherever the
    associated clip mask image is tranparent.

  * Documented methods which were added previously, but left
    undocumented.

(5.3.7)
  * No changes.

(5.3.6)
  * Adjusted parameters to 'edge' and 'medianFilter' to match
    equivalent libMagick functions.
  * Fixed a Montage bug which was not allowing color options to be unset.
  * Montage defaults are no longer taken from first Image in list.
  * Magick++ demo output looks like PerlMagick demo output again.

(5.3.5)
  * Default radius and sigma parameters were changed on the blur,
    charcoal, emboss, and sharpen methods to match ImageMagick defaults.
  * Fixes to Magick++ demos to restore appearance.
  * Added shave method for shaving edges from image (a form of crop).

(5.3.1-5.3.4)
  * No changes.

(5.3.0)
  * Released with ImageMagick 5.3.0
  * Bug fix. Under certain conditions, several annotation options
    were being reset.

(5.2.9)
  * Released with ImageMagick 5.2.9
  * Added fillRule method to Image class.

(5.2.8)
  * Released with ImageMagick 5.2.8
  * Added 'fill' and 'stroke' methods to Montage class.
  * Added 'erase' and 'strokeAntiAlias' methods to Image class.
  * Renamed Image class 'layer' method to 'channel'.