@@ -8,6 +8,15 @@ with Magick++ itself.
     the memory was allocated from.  Used to assume the C++ allocator.
     This resolves a bug on some platforms (e.g. Windows).
 
+  * Added Image 'opacity' method (and STL opacityImage()) to set, or
+    attenuate, image opacity.
+
+  * Added Image 'type' method (and STL typeImage()) to set image
+    representation type.
+
+  * Image depth method now adjusts pixels to match specified image depth,
+    and reports depth based on current image pixels.
+
 (5.3.8.1)
   * No change
 
